- [+] arch/Kconfig
- [+] include/sandix/percpu.h
- [+] arch/x86/include/asm/percpu.h		[D] PER_CPU things.. empty
- [+] include/asm-generic/irq.h
- [+] include/asm-generic/irqflags.h
- [M] arch/x86/include/asm/irqflags.h
- [M] include/sandix/irqflags.h			[D] local_irq_XXX APIs


Sun Feb 21 09:34:09 CST 2016
- [+] init/init_task.c
- [+] Diary/02-21-2016				[D] ISCA 1973 paper, accelerator
- [+] include/asm-generic/current.h
- [M] include/sandix/compiler.h			[D] new label: __init_task_data
- [M] arch/x86/kernel/vmSandix.ld.S		[D] handle .data.init_task
- [M] arch/x86/include/asm/current.h		[D] using esp to obtain task
- [M] arch/x86/include/asm/thread_info.h
- [M] arch/x86/include/asm/processor.h		[D] finally, pt_regs, thread_info, task ~~~~


Mon Feb 22 11:04:52 CST 2016
- [+] include/sandix/resource.h
- [+] include/sandix/threads.h			[D] put NR_CPUS here
- [+] kernel/cpu.c
- [+] arch/x86/include/asm/cpu.h		[D] online, active things
- [M] arch/x86/include/asm/cpumask.h
- [+] arch/x86/include/asm/smp.h		[D] smp processor id things
- [+] include/sandix/smp.h
- [+] kernel/sched.c				[D] switch_to things
- [+] include/asm-generic/switch_to.h
- [+] arch/x86/include/asm/switch_to.h
- [M] arch/x86/kernel/process_32.c
- [M] arch/x86/kernel/process_64.c


Tue Feb 23 12:48:24 CST 2016
- [+] arch/x86/include/asm/msr.h
- [+] arch/x86/kernel/cpu.c			[D] vendor-specific things
- [+] arch/x86/kernel/cpu_intel.c
- [+] kernel/resource.c
- [M] arch/x86/include/asm/asm.c		[D] cpuid wrappers
- [M] arch/x86/include/asm/processor.c		[D] struct cpu_dev
- [M] arch/x86/kernel/setup.c
- [M] include/sandix/bug.h			[D] BUILD_BUG_ON


Wed Feb 24 10:56:24 CST 2016
- [+] arch/x86/kernel/x86_init.c
- [+] arch/x86/include/asm/x86_init.h		[D] Add x86 init ops
- [M] arch/x86/include/asm/io.h			[D] Rewrite
- [M] arch/x86/include/asm/msr.h		[D] Add all ops
- [M] include/sandix/mm.h


Thu Feb 25 08:39:28 CST 2016
- [+] arch/x86/mm/fault.c			[D] Move page fault handler here
- [M] arch/x86/kernel/trap.c