@@ -1,2 +1,3 @@
 obj-y := init.o
 obj-y += fault.o
+obj-y += ioremap.o
